--- a/drafts/testhtml.html
+++ b/drafts/testhtml.html
@@ -5,13 +5,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Burger Quest</title>
-    <link rel="stylesheet" href="./assets/css/style.css" type="text/css" />
+    <link rel="stylesheet" href="../public/assets/css/style.css" type="text/css" />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
         integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css2?family=Carrois+Gothic+SC&family=Open+Sans&display=swap"
         rel="stylesheet">
     <script src="https://code.jquery.com/jquery.js"></script>
-    <script src="/assets/js/burgers.js"></script>
+    <script src="../public/assets/js/burgers.js"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
         crossorigin="anonymous"></script>
@@ -35,8 +35,12 @@
             </div>
         </div>
     </div>
-        
-    <hr class="buffer">
+    
+    <div class="crest-box row d-flex justify-content-center">
+        <img class="crest" src="/public/assets/burgerquestcrest.png" alt="burger-quest-crest">
+    </div>
+
+    <hr class="buffer-top">
 
     <div class="container list-background">
         <div class="row head-room">
